@@ -122,6 +122,24 @@ class TestTableComputation(unittest.TestCase):
         self.assertEqual(len(new_table.columns), 5)
         self.assertSequenceEqual(new_table.columns['rank'], (1, 3, 1, 3))
 
+    def test_rank_number_reverse(self):
+        new_table = self.table.compute([
+            (Rank('two', reverse=True), 'rank')
+        ])
+
+        self.assertEqual(len(new_table.rows), 4)
+        self.assertEqual(len(new_table.columns), 5)
+        self.assertSequenceEqual(new_table.columns['rank'], (3, 1, 3, 1))
+
+    def test_rank_number_cmp(self):
+        new_table = self.table.compute([
+            (Rank('two', cmp=lambda x,y: int(y - x)), 'rank')
+        ])
+
+        self.assertEqual(len(new_table.rows), 4)
+        self.assertEqual(len(new_table.columns), 5)
+        self.assertSequenceEqual(new_table.columns['rank'], (3, 1, 3, 1))
+
     def test_rank_text(self):
         new_table = self.table.compute([
             (Rank('one'), 'rank')
